# player-python

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  sym-app.json
assets/covers/: demo_manifest.json  manifest.json
jukebox/: audio.py  control_page.py  display.py  jukebox-sw.js  manage.html  server.py
jukebox/static/: manifest.webmanifest
player/: server.py
scripts/: build_cover_art.py  seed_demo_library.py
tests/: test_management_api.py
