[project]
name = "jukebox"
version = "1.1.14"
description = "Shared VPS music library with independent browser playback."
requires-python = ">=3.11"
dependencies = [
  "mutagen>=1.46,<2",
  "Pillow>=10,<12",
]

[tool.setuptools]
packages = ["jukebox"]

[tool.setuptools.package-data]
jukebox = ["*.html", "*.js"]
